change image location

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <img src="./home-images-3.jpeg" alt="image-6" />
             <img src="./home-images-1.jpeg" alt="image-7" />
             <img
-              src="./public/home-images/home-images-15.jpeg"
+              src="./home-images-15.jpeg"
               alt="image-15"
             />
           </div>
@@ -445,3 +445,4 @@
     </button>
   </body>
 </html>
+
